# papier

./: .envrc  .gitignore  .justfile  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  releaser.toml
.config/: config.toml
.github/workflows/: cd.yml  publish.yml  release.yml
crates/edtui/: Cargo.toml  README.md
crates/edtui/src/: actions.rs  clipboard.rs  debug.rs  helper.rs  input.rs  lib.rs  state.rs  view.rs
crates/edtui/src/actions/: command.rs  cpaste.rs  delete.rs  insert.rs  motion.rs  search.rs  select.rs
crates/edtui/src/clipboard/: arboard.rs
crates/edtui/src/input/: key.rs  register.rs
crates/edtui/src/state/: command.rs  mode.rs  search.rs  selection.rs  undo.rs  view.rs
crates/edtui/src/view/: explorer.rs  status_line.rs  theme.rs
crates/papier/: Cargo.toml  build.rs
crates/papier/.config/: config.toml
crates/papier/src/: action.rs  app.rs  cli.rs  components.rs  config.rs  main.rs  utils.rs
crates/papier/src/components/: editor.rs  fps.rs
