[package]
name = "edtui-papier"
repository = "https://github.com/preiter93/edtui"
keywords = ["ratatui", "tui", "editor", "text", "vim"]
description = "A TUI based vim inspired editor"
authors = ["preiter <phil.reiter93@gmail.com>"]
license = "MIT"
edition.workspace = true
version.workspace = true

[dependencies]
ratatui = { workspace = true }
crossterm = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["full"] }
jagged = { package = "edtui-jagged", version = "0.1.3" }
enum_dispatch = "0.3.12"
arboard = { version = "3.3.0", optional = true }
synoptic = "2.0.0"

[features]
default = ["arboard"]
arboard = ["dep:arboard"]
