[package]
name = "papier"
version = "0.1.0"
edition = "2021"
description = "Catastrophic editor"
authors = ["cstef <root@cstef.dev>"]
repository = "https://github.com/cestef/papier"

[[bin]]
name = "ppr"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
better-panic = "0.3.0"
clap = { version = "4.5.1", features = [
    "derive",
    "cargo",
    "wrap_help",
    "unicode",
    "string",
    "unstable-styles",
] }
color-eyre = "0.6.2"
config = "0.14.0"
crossterm = { version = "0.27.0", features = ["serde", "event-stream"] }
derive_deref = "1.1.1"
directories = "5.0.1"
futures = "0.3.28"
human-panic = "1.2.3"
json5 = "0.4.1"
lazy_static = "1.4.0"
libc = "0.2.148"
log = "0.4.20"
pretty_assertions = "1.4.0"
ratatui = { version = "0.26.1", features = ["serde", "macros"] }
serde_json = "1.0.114"
signal-hook = "0.3.17"
strip-ansi-escapes = "0.2.0"
strum = { version = "0.26.1", features = ["derive"] }
tokio = { version = "1.36.0", features = ["full"] }
tokio-util = "0.7.10"
toml = "0.8.10"
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "serde"] }
unicode-width = "0.1.11"
edtui = { path = "../edtui", package = "edtui-papier", version = "*" }
