[package]
name = "papier"
description = "Catastrophic editor"
repository = "https://github.com/cestef/papier"
keywords = ["editor", "catastrophic", "vim"]
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true

[[bin]]
name = "ppr"
path = "src/main.rs"

[dependencies]
serde = { workspace = true, features = ["derive"] }
crossterm = { workspace = true, features = ["serde", "event-stream"] }
ratatui = { workspace = true, features = ["serde", "macros"] }
tokio = { workspace = true, features = ["full"] }
edtui = { workspace = true }
better-panic = "0.3.0"
clap = { version = "4.5.1", features = [
    "derive",
    "cargo",
    "wrap_help",
    "unicode",
    "string",
    "unstable-styles",
] }
color-eyre = "0.6.2"
config = "0.14.0"
derive_deref = "1.1.1"
directories = "5.0.1"
futures = "0.3.28"
human-panic = "1.2.3"
json5 = "0.4.1"
lazy_static = "1.4.0"
log = "0.4.20"
pretty_assertions = "1.4.0"
serde_json = "1.0.114"
signal-hook = "0.3.17"
strip-ansi-escapes = "0.2.0"
strum = { version = "0.26.1", features = ["derive"] }
tokio-util = "0.7.10"
toml = "0.8.10"
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "serde"] }
ratatui-explorer = "0.1.1"
tui-term = "0.1.8"
tui-logger = { version = "0.11.0", features = ["tracing-support", "crossterm"] }
